tests/fixtures/invalid/min_float_none.py
# Cannot call min() with Float, None
x = min(1.0, None)
